fixed overlaps & home layout v1

--- a/Components/Layout/NavMenu.razor.css
+++ b/Components/Layout/NavMenu.razor.css
@@ -14,6 +14,7 @@
     display: flex;
     margin: -2em 0 0 1.5em;
     z-index: 1;
+    height: 2.5em;
 }
 
 .navbar-toggler {
@@ -35,7 +36,6 @@
 }
 
 .top-row {
-    height: 3.5rem;
     background-color: var(--peach);
     height: 5rem;
 }
