--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,27 +1,13 @@
-﻿html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-a, .btn-link {
-    color: #006bb7;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-.content {
-    padding-top: 1.1rem;
-}
-
-h1:focus {
-    outline: none;
+﻿:root {
+    --dark-cyan: #1f9298;
+    --timberwolf: #cccdc8;
+    --davy-gray: #545455;
+    --hooker-green: #5e8685;
+    --orange: #FC8425;
+    --peach: #FDC090;
+    --light-orange: #FEDABE;
+    --anti-flash-white: #EFEFEF;
+    --white-smoke: #f5f5f5;
 }
 
 .valid.modified:not([type=checkbox]) {
@@ -34,6 +20,11 @@ h1:focus {
 
 .validation-message {
     color: #e50000;
+}
+
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+    background-color: #FF7518;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem var(--peach);
 }
 
 #blazor-error-ui {
@@ -78,9 +69,5 @@ h1:focus {
         background-color: #f7f7f7;
         width: 100%;
         z-index: 1;
-    }
-
-    .flex-column, .navbar-brand {
-        padding-left: env(safe-area-inset-left);
     }
 }
