--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -67,6 +67,7 @@ body {
     left: 8vh;
     scale: 4;
     z-index: 2;
+    height: 2.5em;
 }
 
 .text-container {
