--- a/wwwroot/css/opentasks.css
+++ b/wwwroot/css/opentasks.css
@@ -24,7 +24,7 @@ h3 {
     font-weight: bold; 
     font-size: 2.5em; 
     color: black;
-    text-shadow: 1px 1px var(--davy-gray);
+    text-shadow: 3px 2px var(--timberwolf);
 }
 h3 span {
     color: var(--orange);
